--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,7 +25,7 @@ builds:
       - darwin
   - id: mdtoansi
     main: ./cmd/mdtoansi/main.go
-    binary: binary
+    binary: mdtoansi
     env:
       - CGO_ENABLED=0
     goos:
